<resources>
    <!--Non Translatable Strings-->
    <string name="app_name" translatable="false">Github User</string>
    <string name="public_repos" translatable="false">Repositories</string>
    <string name="reminder_key" translatable="false">Reminder</string>
    <string name="reminder_time" translatable="false">09.00</string>

    <!--Translatable Strings-->
    <string name="github_user">Github User Info</string>
    <string name="followers">Followers</string>
    <string name="following">Followings</string>
    <string name="repositories">Repositories</string>

    <string name="search_hint">Search someone...</string>
    <string name="not_found">User Not Found</string>
    <string name="nope">%1$s Not Have %2$s</string>
    <string name="home">Home</string>
    <string name="created_by_akhmad_khairul_mujidi">created by myself</string>

    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="change_language">Change Language</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_add">%s Add To Favorite</string>
    <string name="favorite_remove">%s Remove From Favorite</string>
    <string name="reminder">Daily Reminder</string>
    <string name="reminder_on">Daily Reminder On</string>
    <string name="reminder_off">Daily Reminder Off</string>
    <string name="reminder_title">Github User Waiting For You</string>
    <string name="reminder_message">Find Your Favorite User Now!</string>
    <string name="widget_enabled">Github Widget Activated</string>
    <string name="widget_disabled">Github Widget Deactivated</string>
    <string name="location_not_found">Location Not Found :(</string>
    <string name="created_by">Created By: Akhmad Khairul Mujidi</string>
    <string name="separator">Separator</string>
    <string name="followings">3</string>
    <string name="follower">65</string>
    <string name="repos">23</string>



    <!--Example Strings -->
    <string name="exp_login" translatable="false">Login</string>
    <string name="exp_name" translatable="false">Name</string>
    <string name="exp_location" translatable="false">Location</string>
    <string name="exp_type" translatable="false">Type</string>
    <string name="exp_publicRepos" translatable="false">0</string>
    <string name="exp_followers" translatable="false">1</string>
    <string name="exp_following" translatable="false">2</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="location" translatable="false">location</string>
    <string name="name" translatable="false">Akhmad Khairul Mujidi</string>
</resources>