<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="data"
            type="com.khairul.myfinalgithubuserapp.model.GithubUserModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="match_parent"
        tools:context=".fragment.fragments.DetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/detail_avatarUrl"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_user"
                android:contentDescription="@string/app_name"
                app:avatar='@{data.avatar_url ?? "" }'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:civ_border_color="@color/green"
                app:civ_border_width="3dp"
                />

            <TextView
                android:id="@+id/detail_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/white2"
                android:fontFamily="sans-serif-condensed"
                android:text="@{data.type}"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_name"
                tools:text="@string/exp_type" />

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@{data.name??data.login}"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_avatarUrl"
                tools:text="@string/exp_name" />

            <!--Public Repos Configurations-->

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/location"
                android:src="@drawable/ic_location_on_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/detail_locationCity"
                app:layout_constraintEnd_toStartOf="@+id/detail_locationCity"
                app:layout_constraintTop_toTopOf="@+id/detail_locationCity"
                app:tint="@color/yellow" />

            <TextView
                android:id="@+id/detail_locationCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{data.location!=null? data.location : @string/location_not_found}"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_type"
                tools:text="@string/exp_location" />

            <TextView
                android:id="@+id/detail_txt_publicRepos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/public_repos"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/detail_publicRepos"
                app:layout_constraintStart_toEndOf="@+id/detail_publicRepos"
                app:layout_constraintTop_toTopOf="@+id/detail_publicRepos" />

            <TextView
                android:id="@+id/detail_publicRepos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@{String.valueOf(data.public_repos)}"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/detail_txt_publicRepos"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                tools:text="@string/exp_publicRepos" />

            <TextView
                android:id="@+id/detail_txt_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/followers"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/detail_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@{String.valueOf(data.followers)}"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/detail_txt_followers"
                app:layout_constraintEnd_toStartOf="@+id/detail_txt_followers"
                app:layout_constraintTop_toTopOf="@+id/detail_txt_followers"
                tools:text="@string/exp_followers" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_locationCity"
                app:srcCompat="@android:drawable/presence_invisible"
                app:tint="@android:color/white" />

            <TextView
                android:id="@+id/detail_txt_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/following"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/detail_following"
                app:layout_constraintStart_toEndOf="@+id/detail_following"
                app:layout_constraintTop_toTopOf="@+id/detail_following" />

            <TextView
                android:id="@+id/detail_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@{String.valueOf(data.following)}"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                tools:text="@string/exp_following" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="235dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="146dp" />
            <!-- Following Configurations End-->
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:tabIndicatorColor="@color/yellow"
            app:tabSelectedTextColor="@color/red"
            app:tabIndicatorFullWidth="true"
            app:tabTextColor="@android:color/white"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:background="?selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>